# retro

./: CMakeLists.txt  README.md
cmake/: retroConfig.cmake.in
examples/: CMakeLists.txt  fire.cpp  fire.hpp  font_demo.cpp  font_demo.hpp  plasma.cpp  plasma.hpp  vga_test.cpp  vga_test.hpp  xor_demo.cpp  xor_demo.hpp
include/retro/: color.hpp  font.hpp  retro.hpp  sdl2.hpp  sprite.hpp  types.hpp  vga.hpp
src/: CMakeLists.txt  color.cpp  ega_palette.hpp  font.cpp  glyphs.cpp  glyphs.hpp  sdl2.cpp  sprite.cpp  vga.cpp  vga_modes.hpp  video.hpp
